--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Bolt - Free Bootstrap 3 Theme</title>
+    <meta name="description" content="This is my portfolio site.">
+    <meta name="keywords" content="bolt, bootstrap, portfolio"> 
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/reset.css">
@@ -9,7 +13,114 @@
     <link rel="stylesheet" href="css/lib/all.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
+  
   <body>
+    <header class="header">
+      <div class="inner header__inner">
+        <i class="fas fa-bolt bolt__icon"></i>
+        <a href="#" class="header__bottom bottom">Contact</a>
+      </div>
+    </header>
 
+    <main>
+      <div class="parent main__first__content back__gry">
+        <div class="inner bolt__theme">
+          <h1>Bolt Theme</h1>
+        </div>
+        <div class="inner bootstrap">
+          <p> FREE BOOTSTRAP THEMES </p>
+        </div>
+      </div>
+
+      <section class="introduction back__green">
+        <div class="inner inner__introduction">
+          <div class="phone-img"><img src="img/iphone.png"></div>
+          <div class="introduction__text">
+            <h1 class="introduction__text--title">
+              WHAT WE CAN DO?
+            </h1>
+            <p class="introduction__text--text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          </div>
+        </div>
+      </section>
+
+      <article class="back__gry">
+        <div class="inner works">
+          <h1 class="works--title">OUR LATEST WORK</h1>
+          <ul class="works__ul">
+            <li class="works__li">
+              <img src="img/01.jpg" alt="" class="works--image">
+            </li>
+            <li class="works__li">
+              <img src="img/02.jpg" alt="" class="works--image">
+            </li>
+            <li class="works__li">
+              <img src="img/03.jpg" alt="" class="works--image">
+            </li>
+            <li class="works__li">
+              <img src="img/04.jpg" alt="" class="works--image">
+            </li>
+            <li class="works__li">
+              <img src="img/05.jpg" alt="" class="works--image">
+            </li>
+            <li class="works__li">
+              <img src="img/06.jpg" alt="" class="works--image">
+            </li>
+          </ul>
+          <div class="works__footer">
+            <p class="works__footer__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            <a href="Email" class="works__footer--bottom bottom">Email Me!</a>
+          </div>
+        </div>
+      </article>
+
+      <section class="skills">
+        <div class=" inner skills__inner">
+          <h1 class="skills__text">OUR SKILLS</h1>
+          <ul class="skills__ul">
+            <li class="skills__li">
+              <img src="img/circle_01.png" alt="">
+              <p class="skills__li--text">Java Script</p>
+            </li>
+            <li class="skills__li">
+              <img src="img/circle_02.png" alt="">
+              <p class="skills__li--text">Boot Strap</p>
+            </li>
+            <li class="skills__li">
+              <img src="img/circle_03.png" alt="">
+              <p class="skills__li--text">Word Press</p>
+            </li>
+            <li class="skills__li">
+              <img src="img/circle_04.png" alt="">
+              <p class="skills__li--text">Photo Shop</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <nav class="logo back__gry">
+        <div class="inner logo__inner">
+          <a href="#" class="logo__bottom">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="#" class="logo__bottom">
+            <i class="fab fa-dribbble"></i>
+          </a>
+          <a href="#" class="logo__bottom">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="#" class="logo__bottom">
+            <i class="fas fa-envelope"></i>
+          </a>
+        </div>
+      </nav>
+    </main>
+    <footer class="footer back__green">
+      <div class="inner footer__inner">
+        <p class="footer--text">
+          Crafted with <i class="fa fa-heart"></i> by BlackTie.co.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
