レスポンシブデザイン対応

--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     <link rel="stylesheet" href="css/lib/all.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  
+
   <body>
     <header class="header">
       <div class="inner header__inner">
         <i class="fas fa-bolt bolt__icon"></i>
-        <a href="#" class="header__bottom bottom">Contact</a>
+        <a href="#" class="header__btn bottom">Contact</a>
+        <a class="mobile__menu__btn">
+          <div class="mobile__menu__btn-line"></div>
+          <div class="mobile__menu__btn-line"></div>
+          <div class="mobile__menu__btn-line"></div>
+        </a>
       </div>
     </header>
 
@@ -26,9 +31,7 @@
       <div class="parent main__first__content back__gry">
         <div class="inner bolt__theme">
           <h1>Bolt Theme</h1>
-        </div>
-        <div class="inner bootstrap">
-          <p> FREE BOOTSTRAP THEMES </p>
+          <p class="inner bootstrap"> FREE BOOTSTRAP THEMES </p>
         </div>
       </div>
 
@@ -36,47 +39,59 @@
         <div class="inner inner__introduction">
           <div class="phone-img"><img src="img/iphone.png"></div>
           <div class="introduction__text">
-            <h1 class="introduction__text--title">
+            <h2 class="introduction__text--title Raleway">
               WHAT WE CAN DO?
-            </h1>
+            </h2>
             <p class="introduction__text--text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
           </div>
         </div>
       </section>
 
-      <article class="back__gry">
-        <div class="inner works">
-          <h1 class="works--title">OUR LATEST WORK</h1>
+      <article class="works back__gry">
+        <div class="inner inner__works">
+          <h2 class="works--title Raleway">OUR LATEST WORK</h2>
           <ul class="works__ul">
             <li class="works__li">
-              <img src="img/01.jpg" alt="" class="works--image">
+              <a href="#">
+                <img src="img/01.jpg" alt="" class="works--image">
+              </a>
             </li>
             <li class="works__li">
-              <img src="img/02.jpg" alt="" class="works--image">
+              <a href="#">
+                <img src="img/02.jpg" alt="" class="works--image">
+              </a>
             </li>
             <li class="works__li">
-              <img src="img/03.jpg" alt="" class="works--image">
+              <a href="#">
+                <img src="img/03.jpg" alt="" class="works--image">
+              </a>
             </li>
             <li class="works__li">
-              <img src="img/04.jpg" alt="" class="works--image">
+              <a href="#">
+                <img src="img/04.jpg" alt="" class="works--image">
+              </a>
             </li>
             <li class="works__li">
-              <img src="img/05.jpg" alt="" class="works--image">
+              <a href="#">
+                <img src="img/05.jpg" alt="" class="works--image">
+              </a>
             </li>
             <li class="works__li">
-              <img src="img/06.jpg" alt="" class="works--image">
+              <a href="#">
+                <img src="img/06.jpg" alt="" class="works--image">
+              </a>
             </li>
           </ul>
           <div class="works__footer">
             <p class="works__footer__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-            <a href="Email" class="works__footer--bottom bottom">Email Me!</a>
+            <a href="#" class="works__footer--btn bottom">Email Me!</a>
           </div>
         </div>
       </article>
 
       <section class="skills">
         <div class=" inner skills__inner">
-          <h1 class="skills__text">OUR SKILLS</h1>
+          <h2 class="skills__title Raleway">OUR SKILLS</h2>
           <ul class="skills__ul">
             <li class="skills__li">
               <img src="img/circle_01.png" alt="">
@@ -99,7 +114,7 @@
       </section>
 
       <nav class="logo back__gry">
-        <div class="inner logo__inner">
+        <div class="logo__inner">
           <a href="#" class="logo__bottom">
             <i class="fab fa-facebook-f"></i>
           </a>
