メンターレビュー改善

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <i class="fas fa-bolt bolt__icon"></i>
         <a href="#" class="header__btn bottom">Contact</a>
         <a class="mobile__menu__btn">
-          <div class="mobile__menu__btn-line"></div>
-          <div class="mobile__menu__btn-line"></div>
-          <div class="mobile__menu__btn-line"></div>
+          <span class="mobile__menu__btn-line"></span>
+          <span class="mobile__menu__btn-line"></span>
+          <span class="mobile__menu__btn-line"></span>
         </a>
       </div>
     </header>
 
-    <main>
+    <main class="main">
       <div class="parent main__first__content back__gry">
         <div class="inner bolt__theme">
-          <h1>Bolt Theme</h1>
-          <p class="inner bootstrap"> FREE BOOTSTRAP THEMES </p>
+          <h1 class="Raleway">Bolt Theme</h1>
+          <p class="bootstrap"> FREE BOOTSTRAP THEMES </p>
         </div>
       </div>
 
@@ -99,7 +99,7 @@
             </li>
             <li class="skills__li">
               <img src="img/circle_02.png" alt="">
-              <p class="skills__li--text">Boot Strap</p>
+              <p class="skills__li--text">Bootstrap</p>
             </li>
             <li class="skills__li">
               <img src="img/circle_03.png" alt="">
@@ -107,27 +107,35 @@
             </li>
             <li class="skills__li">
               <img src="img/circle_04.png" alt="">
-              <p class="skills__li--text">Photo Shop</p>
+              <p class="skills__li--text">Photoshop</p>
             </li>
           </ul>
         </div>
       </section>
 
       <nav class="logo back__gry">
-        <div class="logo__inner">
-          <a href="#" class="logo__bottom">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="#" class="logo__bottom">
-            <i class="fab fa-dribbble"></i>
-          </a>
-          <a href="#" class="logo__bottom">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#" class="logo__bottom">
-            <i class="fas fa-envelope"></i>
-          </a>
-        </div>
+        <ul class="inner logo__inner">
+          <li>
+            <a href="#" class="logo__bottom">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="logo__bottom">
+              <i class="fab fa-dribbble"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="logo__bottom">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="logo__bottom">
+              <i class="fas fa-envelope"></i>
+            </a>
+          </li>
+        </ul>
       </nav>
     </main>
     <footer class="footer back__green">
