メンターレビュー修正

--- a/index.html
+++ b/index.html
@@ -52,32 +52,32 @@
           <h2 class="works--title Raleway">OUR LATEST WORK</h2>
           <ul class="works__ul">
             <li class="works__li">
-              <a href="#">
+              <a href="#" class="works__link">
                 <img src="img/01.jpg" alt="" class="works--image">
               </a>
             </li>
             <li class="works__li">
-              <a href="#">
+              <a href="#" class="works__link">
                 <img src="img/02.jpg" alt="" class="works--image">
               </a>
             </li>
             <li class="works__li">
-              <a href="#">
+              <a href="# class="works__link"">
                 <img src="img/03.jpg" alt="" class="works--image">
               </a>
             </li>
             <li class="works__li">
-              <a href="#">
+              <a href="#" class="works__link">
                 <img src="img/04.jpg" alt="" class="works--image">
               </a>
             </li>
             <li class="works__li">
-              <a href="#">
+              <a href="#" class="works__link">
                 <img src="img/05.jpg" alt="" class="works--image">
               </a>
             </li>
             <li class="works__li">
-              <a href="#">
+              <a href="#" class="works__link">
                 <img src="img/06.jpg" alt="" class="works--image">
               </a>
             </li>
