--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <div class="inner header__inner">
         <i class="fas fa-bolt bolt__icon"></i>
         <a href="#" class="header__btn bottom">Contact</a>
-        <a class="mobile__menu__btn">
+        <div class="mobile__menu__btn">
           <span class="mobile__menu__btn-line"></span>
           <span class="mobile__menu__btn-line"></span>
           <span class="mobile__menu__btn-line"></span>
-        </a>
+        </div>
       </div>
     </header>
 
@@ -62,7 +62,7 @@
               </a>
             </li>
             <li class="works__li">
-              <a href="# class="works__link"">
+              <a href="#" class="works__link">
                 <img src="img/03.jpg" alt="" class="works--image">
               </a>
             </li>
