--- a/index.html
+++ b/index.html
@@ -1,15 +1,186 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/lib/all.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="This is my portfolio site.">
+  <meta name="keywords" content="bolt, bootstrap, portfolio">
+  <title>Bolt - Free Bootstrap 3 Theme</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/lib/all.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+
+  <!-- header -->
+  <header class="header">
+    <div class="inner header-inner">
+      <h1 class="header-logo">
+        <i class="fas fa-bolt"></i>
+      </h1>
+      <div class="header-contact">
+        <a href="/" class="common-button">Contact</a>
+      </div>
+    </div>
+  </header>
+  <!-- /.header -->
+
+  <!-- main -->
+  <main>
+    <!-- main visual -->
+    <div class="main-visual">
+      <div class="inner main-visual__inner">
+        <h2 class="main-visual__title">Bolt Theme</h2>
+        <p class="main-visual__lead">FREE BOOTSTRAP THEMES</p>
+      </div>
+    </div>
+    <!-- /.main visual -->
+
+    <!-- main about -->
+    <section class="main-about">
+      <div class="inner main-about__inner">
+        <div class="main-about__content">
+          <h3 class="main-about__title">WHAT WE CAN DO?</h3>
+          <p class="main-about__text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book.
+          </p>
+        </div>
+        <div class="main-about__image">
+          <img src="./img/iphone.png" alt="iphone image">
+        </div>
+      </div>
+    </section>
+    <!-- /.main about -->
+
+    <!-- main work -->
+    <article class="main-work">
+      <div class="inner main-work__inner">
+        <h3 class="main-work__title">OUR LATEST WORK</h3>
+        <div class="main-work__content">
+          <ul class="main-work__items">
+            <li class="main-work__item">
+              <a href="/" class="main-work__link">
+                <img src="./img/01.jpg" alt="main-work image1">
+              </a>
+            </li>
+            <li class="main-work__item">
+              <a href="/" class="main-work__link">
+                <img src="./img/02.jpg" alt="main-work image2">
+              </a>
+            </li>
+            <li class="main-work__item">
+              <a href="/" class="main-work__link">
+                <img src="./img/03.jpg" alt="main-work image3">
+              </a>
+            </li>
+            <li class="main-work__item">
+              <a href="/" class="main-work__link">
+                <img src="./img/04.jpg" alt="main-work image4">
+              </a>
+            </li>
+            <li class="main-work__item">
+              <a href="/" class="main-work__link">
+                <img src="./img/05.jpg" alt="main-work image5">
+              </a>
+            </li>
+            <li class="main-work__item">
+              <a href="/" class="main-work__link">
+                <img src="./img/06.jpg" alt="main-work image6">
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="main-work__contact">
+          <p class="main-work__contact_text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+          </p>
+          <div class="main-work__contact_mail">
+            <a href="/" class="common-button">Email Me!</a>
+          </div>
+        </div>
+      </div>
+    </article>
+    <!-- /.main work -->
+
+    <!-- main skills -->
+    <section class="main-skills">
+      <div class="inner main-skills__inner">
+        <h3 class="main-skills__title">OUR SKILLS</h3>
+        <div class="main-skills__content">
+          <div class="main-skills__items">
+            <figure class="main-skills__item">
+              <img src="./img/circle_01.png" alt="skill circle">
+              <figcaption class="main-skills__name is-lato">JavaScript</figcaption>
+            </figure>
+            <figure class="main-skills__item">
+              <img src="./img/circle_02.png" alt="skill circle">
+              <figcaption class="main-skills__name is-lato">Bootstrap</figcaption>
+            </figure>
+            <figure class="main-skills__item">
+              <img src="./img/circle_03.png" alt="skill circle">
+              <figcaption class="main-skills__name is-lato">WordPress</figcaption>
+            </figure>
+            <figure class="main-skills__item">
+              <img src="./img/circle_04.png" alt="skill circle">
+              <figcaption class="main-skills__name is-lato">Photoshop</figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /.main skills -->
+
+    <!-- main sns -->
+    <nav class="main-sns">
+      <div class="inner main-sns__inner">
+        <div class="main-sns__content">
+          <ul class="main-sns__items">
+            <li class="main-sns__item">
+              <a href="/" class="main-sns__link">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li class="main-sns__item">
+              <a href="/" class="main-sns__link">
+                <i class="fab fa-dribbble"></i>
+              </a>
+            </li>
+            <li class="main-sns__item">
+              <a href="/" class="main-sns__link">
+                <i class="fab fa-twitter main-sns-conetnt-icon"></i>
+              </a>
+            </li>
+            <li class="main-sns__item">
+              <a href="/" class="main-sns__link">
+                <i class="fas fa-envelope"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- /.main sns -->
+  </main>
+  <!-- /.main -->
+
+  <!-- footer -->
+  <footer class="footer">
+    <div class="inner footer-inner">
+      <p class="footer-copyright">
+        Craft with
+        <i class="fas fa-heart"></i>
+        by BlackTie.co.</p>
+    </div>
+  </footer>
+  <!-- /.footer -->
+
+</body>
+
 </html>
