CSS Tab用レスポンシブコードを記述　＋　各種コード修正

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
         </div>
         <div class="main-work__contact">
           <p class="main-work__contact_text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever.
           </p>
           <div class="main-work__contact_mail">
             <a href="/" class="common-button">Email Me!</a>
