SP用追記 + 各種コード修正

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
       <div class="header-contact">
         <a href="/" class="common-button">Contact</a>
       </div>
+      <!-- sp hamburger -->
+      <div class="header-hamburger">
+        <div class="header-hamburger__line"></div>
+        <div class="header-hamburger__line"></div>
+        <div class="header-hamburger__line"></div>
+      </div>
+      <!-- /.sp hamburger -->
     </div>
   </header>
   <!-- /.header -->
