Bolt レビュー前最終調整

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- /.header -->
 
   <!-- main -->
-  <main>
+  <main class="main">
     <!-- main visual -->
     <div class="main-visual">
       <div class="inner main-visual__inner">
@@ -110,7 +110,7 @@
             industry's standard dummy text ever.
           </p>
           <div class="main-work__contact_mail">
-            <a href="/" class="common-button">Email Me!</a>
+            <a href="/" class="common-button mail-button">Email Me!</a>
           </div>
         </div>
       </div>
@@ -184,7 +184,8 @@
       <p class="footer-copyright">
         Craft with
         <i class="fas fa-heart"></i>
-        by BlackTie.co.</p>
+        by BlackTie.co.
+      </p>
     </div>
   </footer>
   <!-- /.footer -->
