--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <!-- header -->
   <header class="header">
     <div class="inner header-inner">
-      <h1 class="header-logo">
+      <div class="header-logo">
         <i class="fas fa-bolt"></i>
-      </h1>
+      </div>
       <div class="header-contact">
         <a href="/" class="common-button">Contact</a>
       </div>
@@ -42,7 +42,7 @@
     <!-- main visual -->
     <div class="main-visual">
       <div class="inner main-visual__inner">
-        <h2 class="main-visual__title">Bolt Theme</h2>
+        <h1 class="main-visual__title font-raleway">Bolt Theme</h1>
         <p class="main-visual__lead">FREE BOOTSTRAP THEMES</p>
       </div>
     </div>
@@ -51,16 +51,16 @@
     <!-- main about -->
     <section class="main-about">
       <div class="inner main-about__inner">
+        <div class="main-about__image">
+          <img src="./img/iphone.png" alt="iphone image">
+        </div>
         <div class="main-about__content">
-          <h3 class="main-about__title">WHAT WE CAN DO?</h3>
+          <h2 class="main-about__title font-raleway">WHAT WE CAN DO?</h2>
           <p class="main-about__text">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
             industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
             scrambled it to make a type specimen book.
           </p>
-        </div>
-        <div class="main-about__image">
-          <img src="./img/iphone.png" alt="iphone image">
         </div>
       </div>
     </section>
@@ -69,7 +69,7 @@
     <!-- main work -->
     <article class="main-work">
       <div class="inner main-work__inner">
-        <h3 class="main-work__title">OUR LATEST WORK</h3>
+        <h2 class="main-work__title font-raleway">OUR LATEST WORK</h2>
         <div class="main-work__content">
           <ul class="main-work__items">
             <li class="main-work__item">
@@ -120,24 +120,24 @@
     <!-- main skills -->
     <section class="main-skills">
       <div class="inner main-skills__inner">
-        <h3 class="main-skills__title">OUR SKILLS</h3>
+        <h2 class="main-skills__title font-raleway">OUR SKILLS</h2>
         <div class="main-skills__content">
           <div class="main-skills__items">
             <figure class="main-skills__item">
               <img src="./img/circle_01.png" alt="skill circle">
-              <figcaption class="main-skills__name is-lato">JavaScript</figcaption>
+              <figcaption class="main-skills__name">JavaScript</figcaption>
             </figure>
             <figure class="main-skills__item">
               <img src="./img/circle_02.png" alt="skill circle">
-              <figcaption class="main-skills__name is-lato">Bootstrap</figcaption>
+              <figcaption class="main-skills__name">Bootstrap</figcaption>
             </figure>
             <figure class="main-skills__item">
               <img src="./img/circle_03.png" alt="skill circle">
-              <figcaption class="main-skills__name is-lato">WordPress</figcaption>
+              <figcaption class="main-skills__name">WordPress</figcaption>
             </figure>
             <figure class="main-skills__item">
               <img src="./img/circle_04.png" alt="skill circle">
-              <figcaption class="main-skills__name is-lato">Photoshop</figcaption>
+              <figcaption class="main-skills__name">Photoshop</figcaption>
             </figure>
           </div>
         </div>
