フォント追加

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="main-visual">
       <div class="inner main-visual__inner">
         <h1 class="main-visual__title font-raleway">Bolt Theme</h1>
-        <p class="main-visual__lead">FREE BOOTSTRAP THEMES</p>
+        <p class="main-visual__lead font-raleway">FREE BOOTSTRAP THEMES</p>
       </div>
     </div>
     <!-- /.main visual -->
