メンターの方からのレビューを受け、修正

--- a/index.html
+++ b/index.html
@@ -70,40 +70,38 @@
     <article class="main-work">
       <div class="inner main-work__inner">
         <h2 class="main-work__title font-raleway">OUR LATEST WORK</h2>
-        <div class="main-work__content">
-          <ul class="main-work__items">
-            <li class="main-work__item">
-              <a href="/" class="main-work__link">
-                <img src="./img/01.jpg" alt="main-work image1">
-              </a>
-            </li>
-            <li class="main-work__item">
-              <a href="/" class="main-work__link">
-                <img src="./img/02.jpg" alt="main-work image2">
-              </a>
-            </li>
-            <li class="main-work__item">
-              <a href="/" class="main-work__link">
-                <img src="./img/03.jpg" alt="main-work image3">
-              </a>
-            </li>
-            <li class="main-work__item">
-              <a href="/" class="main-work__link">
-                <img src="./img/04.jpg" alt="main-work image4">
-              </a>
-            </li>
-            <li class="main-work__item">
-              <a href="/" class="main-work__link">
-                <img src="./img/05.jpg" alt="main-work image5">
-              </a>
-            </li>
-            <li class="main-work__item">
-              <a href="/" class="main-work__link">
-                <img src="./img/06.jpg" alt="main-work image6">
-              </a>
-            </li>
-          </ul>
-        </div>
+        <ul class="main-work__items">
+          <li>
+            <a href="/">
+              <img src="./img/01.jpg" alt="main-work image1">
+            </a>
+          </li>
+          <li>
+            <a href="/">
+              <img src="./img/02.jpg" alt="main-work image2">
+            </a>
+          </li>
+          <li>
+            <a href="/">
+              <img src="./img/03.jpg" alt="main-work image3">
+            </a>
+          </li>
+          <li>
+            <a href="/">
+              <img src="./img/04.jpg" alt="main-work image4">
+            </a>
+          </li>
+          <li>
+            <a href="/">
+              <img src="./img/05.jpg" alt="main-work image5">
+            </a>
+          </li>
+          <li>
+            <a href="/">
+              <img src="./img/06.jpg" alt="main-work image6">
+            </a>
+          </li>
+        </ul>
         <div class="main-work__contact">
           <p class="main-work__contact_text">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -121,26 +119,32 @@
     <section class="main-skills">
       <div class="inner main-skills__inner">
         <h2 class="main-skills__title font-raleway">OUR SKILLS</h2>
-        <div class="main-skills__content">
-          <div class="main-skills__items">
-            <figure class="main-skills__item">
+        <ul class="main-skills__items">
+          <li>
+            <figure>
               <img src="./img/circle_01.png" alt="skill circle">
-              <figcaption class="main-skills__name">JavaScript</figcaption>
+              <figcaption>JavaScript</figcaption>
             </figure>
-            <figure class="main-skills__item">
+          </li>
+          <li>
+            <figure>
               <img src="./img/circle_02.png" alt="skill circle">
-              <figcaption class="main-skills__name">Bootstrap</figcaption>
+              <figcaption>Bootstrap</figcaption>
             </figure>
-            <figure class="main-skills__item">
+          </li>
+          <li>
+            <figure>
               <img src="./img/circle_03.png" alt="skill circle">
-              <figcaption class="main-skills__name">WordPress</figcaption>
+              <figcaption>WordPress</figcaption>
             </figure>
-            <figure class="main-skills__item">
+          </li>
+          <li>
+            <figure>
               <img src="./img/circle_04.png" alt="skill circle">
-              <figcaption class="main-skills__name">Photoshop</figcaption>
+              <figcaption>Photoshop</figcaption>
             </figure>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
     </section>
     <!-- /.main skills -->
@@ -148,30 +152,28 @@
     <!-- main sns -->
     <nav class="main-sns">
       <div class="inner main-sns__inner">
-        <div class="main-sns__content">
-          <ul class="main-sns__items">
-            <li class="main-sns__item">
-              <a href="/" class="main-sns__link">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="main-sns__item">
-              <a href="/" class="main-sns__link">
-                <i class="fab fa-dribbble"></i>
-              </a>
-            </li>
-            <li class="main-sns__item">
-              <a href="/" class="main-sns__link">
-                <i class="fab fa-twitter main-sns-conetnt-icon"></i>
-              </a>
-            </li>
-            <li class="main-sns__item">
-              <a href="/" class="main-sns__link">
-                <i class="fas fa-envelope"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
+        <ul class="main-sns__items">
+          <li>
+            <a href="/">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+          <li>
+            <a href="/">
+              <i class="fab fa-dribbble"></i>
+            </a>
+          </li>
+          <li>
+            <a href="/">
+              <i class="fab fa-twitter main-sns-conetnt-icon"></i>
+            </a>
+          </li>
+          <li>
+            <a href="/">
+              <i class="fas fa-envelope"></i>
+            </a>
+          </li>
+        </ul>
       </div>
     </nav>
     <!-- /.main sns -->
