aタグの範囲修正、ハンバーガーのline修正、画像のmargin指定修正

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </div>
       <!-- sp hamburger -->
       <div class="header-hamburger">
-        <div class="header-hamburger__line"></div>
-        <div class="header-hamburger__line"></div>
-        <div class="header-hamburger__line"></div>
+        <span class="header-hamburger__line"></span>
+        <span class="header-hamburger__line"></span>
+        <span class="header-hamburger__line"></span>
       </div>
       <!-- /.sp hamburger -->
     </div>
